--- a/static/css/my.css
+++ b/static/css/my.css
@@ -50,6 +50,15 @@
   margin-left: 10%;
   /* margin: 0px 5%; */
 }
+
+.titles > .not_selected {
+  font-size: 2rem;
+  text-decoration: none;
+  margin-left: 10%;
+  color: #b21548;
+  /* margin: 0px 5%; */
+}
+
 .titles > .pop_tags_and_memb {
   font-size: 2.7rem;
   color: black;
@@ -123,7 +132,7 @@
   margin-right: 15%;
 }
 .ask_btn {
-  margin-left: 5%;
+  margin-left: 100%;
 }
 
 .Question {
