--- a/templates/include/question_head.html
+++ b/templates/include/question_head.html
@@ -3,14 +3,14 @@
 <div class="row Question_main">
     <div class="col-3 avatar_and_rating">
         <!--аватарка-->
-        <img class="avatar" src="{{ question.avatar }}" alt="">
+        <img class="avatar" src="{{ qurstion.user.avatar }}" alt="">
         <div class="rating">
             <div class="btn-group-vertical">
                 <button type="button" class="btn btn-success">
-                    <span class="badge badge-light">{{ question.like_counter }}</span>
+                    <span class="badge badge-light">{{ question.likes.count }}</span>
                 </button>
                 <button type="button" class="btn btn-danger">
-                    <span class="badge badge-light">{{ question.dislike_counter }}</span>
+                    <span class="badge badge-light">{{ question.dislikes.count }}</span>
                 </button>
             </div>
         </div>
@@ -21,13 +21,13 @@
             <div class="selected">{{ question.title }}</div>
         </div>
         <div class="row question_text">
-            {{ question.text }}
+            {{ question.question_text }}
         </div>
         <div class="row">
             <div class="col-8">
                 <div class="tags">
                     <h4>tags:</h5>
-                    {% for tag in question.tags %}
+                    {% for tag in question.tags.all %}
                         <a href="{% url 'tag' tagid=tag %}" class="tag">{{ tag }}</a>
                     {% endfor %}
                 </div>
