--- a/templates/include/single_answer.html
+++ b/templates/include/single_answer.html
@@ -3,14 +3,14 @@
 <div class="row Answer">
     <div class="col-2 avatar_and_rating">
         <!--аватарка-->
-        <img class="avatar" src="{{ answer.avatar }}" alt="">
+        <img class="avatar" src="{{ answer.author.avatar }}" alt="">
         <div class="rating">
             <div class="btn-group-vertical">
                 <button type="button" class="btn btn-success">
-                    <span class="badge badge-light">{{ answer.like_counter }}</span>
+                    <span class="badge badge-light">{{ answer.likes.count }}</span>
                 </button>
                 <button type="button" class="btn btn-danger">
-                    <span class="badge badge-light">{{ answer.dislike_counter }}</span>
+                    <span class="badge badge-light">{{ answer.dislikes.count }}</span>
                 </button>
             </div>
         </div>
