--- a/templates/include/single_question.html
+++ b/templates/include/single_question.html
@@ -3,14 +3,14 @@
 <div class="row Question">
     <div class="col-2 avatar_and_rating">
         <!--аватарка-->
-        <img class="avatar" src="{{ question.avatar }}" alt="">
+        <img class="avatar" src="{{question.author.avatar}}" alt="">
         <div class="rating">
             <div class="btn-group-vertical">
                 <button type="button" class="btn btn-success">
-                    <span class="badge badge-light">{{ question.like_counter }}</span>
+                    <span class="badge badge-light">{{ question.likes.count }}</span>
                 </button>
                 <button type="button" class="btn btn-danger">
-                    <span class="badge badge-light">{{ question.like_counter }}</span>
+                    <span class="badge badge-light">{{ question.dislikes.count }}</span>
                 </button>
             </div>
         </div>
@@ -25,22 +25,22 @@
         </div>
         <div class="row question_text">
             <h5>question: </h5>
-            {{ question.text }}
+            {{ question.question_text }}
         </div>
-        <div class="row question_answer">
+        {% comment %} <div class="row question_answer">
             <h5>best answer: </h5>
-            {{ question.best_ans }}
-        </div>
+            
+        </div> {% endcomment %}
         <div class="row">
             <div class="col-4 question_answer">
                 <a href="{% url 'question' id=question.id %}" class="">
-                    more answers ({{ question.numb_of_answers }})
+                    more answers!
                 </a>
             </div>
             <div class="col-8">
                 <div class="tags">
                     <h6>tags:</h6>
-                    {% for tag in question.tags %}
+                    {% for tag in question.tags.all %}
                     <a href="{% url 'tag' tagid=tag %}" class="tag">{{ tag }}</a>
                     {% endfor %}
                 </div>
