--- a/templates/include/single_answer.html
+++ b/templates/include/single_answer.html
@@ -7,10 +7,10 @@
         <div class="rating">
             <div class="btn-group-vertical">
                 <button type="button" class="btn btn-success">
-                    <span class="badge badge-light">{{ answer.likes.count }}</span>
+                    <span class="badge badge-light">{{ answer.likes_count }}</span>
                 </button>
                 <button type="button" class="btn btn-danger">
-                    <span class="badge badge-light">{{ answer.dislikes.count }}</span>
+                    <span class="badge badge-light">{{ answer.dislikes_count }}</span>
                 </button>
             </div>
         </div>
